refactoring random media stuff